Revision history for Geo-Coder-Yahoo

0.02    2006/07/11
        - Use proxy settings from the environment variables, see the
          ENVIRONMENT section in the LWP documentation (Leonard A Jaffe)

0.01    2005/11/16
        First version, released on an unsuspecting world.
